--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Sneaker Head</title>
-        <link rel="stylesheet" src="style.css"/>
+        <link rel="stylesheet" href="style.css"/>
 
 
 
