Hellmo's Sneaker Shop

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Sneaker Head</title>
+        <title>Hellmo's Sneaker Shop</title>
         <link rel="stylesheet" href="style.css"/>
 
 
@@ -10,7 +10,9 @@
     </head>
     <body>
         <div id="header">
-            <h1>Sneaker Heads</h1>
+                <img src="img/background.gif" height="50px"/>
+                <h1>Hellmo's Sneaker Shop</h1>
+                <img src="img/background.gif" height="50px"/>
         </div>
         <div id="rows">
             <div id="row1">
